# MJCT

./: .gitignore  .gitmodules  CMakeLists - Copy.txt  CMakeLists.txt  MuJoCoTasks.sln  README.md  d  setup.py
MuJoCoTasks/: MUJOCO_LOG.TXT  MuJoCoTasks.vcxproj  MuJoCoTasks.vcxproj.filters  binder.cpp  main.cpp  mjct.h  mjct_py.h  samplecode.cpp  simulate.h  test.cpp  test.h  tosser.xml  utilities.h
batfiles/: build.bat  readme.txt  test.bat  test_mjct.bat
build_scripts/: build.bat  first_build.bat  goto_debug.bat  readme.txt  test.bat  test_mjct.bat
mjct/: __init__.py
mjct.egg-info/: PKG-INFO  SOURCES.txt
